fix: horizontal scroll mobile

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -40,7 +40,7 @@ a {
 .sr-only { @include hidden; }
 
 .h-scroll {
-    @media screen and (min-width: 1023px) {
+    @media screen and (max-width: 1023px) {
         display: flex !important;
         overflow-x: scroll;
         width: 100vw;
